# fastSDK

./: .gitignore  README.md  TECHNICAL_README.md  fastsdk.code-workspace  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/: entity_relationship_definition.txt  software_architecture.md  software_architecture.puml
examples/: client_factory_example.py  parse_socaity_api.py  service_management_example.py
fastsdk/: APISDK.py  __init__.py  api_job_manager.py  fastClient.py  fastSDK.py  fast_sdk.py  fast_sdk2.py  fast_sdk_old.py  registry.py  service_definition.py  settings.py  utils.py
fastsdk/client/: __init__.py  api_client.py
fastsdk/client/definitions/: endpoint.py  server_job_status.py  service_adress.py
fastsdk/client/req/: endpoint_request.py  request_handler.py  request_handler_replicate.py  request_handler_runpod.py  request_handler_socaity.py
fastsdk/client_factory/: __init__.py  api_client_factory.py  api_client_template.j2
fastsdk/definitions/: __init__.py  ai_model.py  base_response.py  enums.py  factory.py  service_definition.py
fastsdk/jobs/: job_utils.py
fastsdk/jobs/async_jobs/: async_job.py  async_job_manager.py
fastsdk/jobs/threaded/: internal_job.py  internal_job_manager.py  job_progress.py
fastsdk/sdk_factory/: __init__.py  sdk_factory.py  sdk_template.j2
fastsdk/service_interaction/: __init__.py  api_job_manager.py  api_seex.py
fastsdk/service_interaction/request/: __init__.py  api_client.py  api_client_replicate.py  api_client_runpod.py  api_client_socaity.py  (+5 more)
fastsdk/service_management/: __init__.py  service_definition.py  service_manager.py
fastsdk/service_specification_loader/: runpod_open_api_loader.py  spec_loader.py
fastsdk/web/: __init__.py  api_client.py  service_client.py
socaity_client/: __init__.py  service_client_api.py
socaity_client/definitions/: ai_model.py
socaity_client/jobs/: job_utils.py
socaity_client/web/: service_client.py
test/: all_replicate_models.json  speechcraft_openapi_spec.json  test_client_factory.py  test_client_from_fastapi.py  test_client_from_runpod_serverless.py  test_cloud_handler.py  test_httpx_api.py  test_manual_sdk.py
test/fries_maker/: fries_maker_client_api.py  service_fries_maker.py  test_fries_maker.py
test/test_files/: cog_judith.json  face2face.json
(+68 files in other folders)
