[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastsdk"
version = "0.2.0"
description = "Your SDK and model zoo for generative AI. Build AI-powered applications with ease."
requires-python = ">=3.8"
authors = [
    { name = "SocAIty" }
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "tqdm",
    "pydantic>=pydantic-2.11.3",
    "meseex",
    "media-toolkit[VideoFile]>=00.02.02",
    "singleton_decorator==1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Repository = "https://github.com/SocAIty/socaity"
Homepage = "https://www.socaity.ai"
