[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastsdk"
version = "0.2.8"
description = "Your SDK and model zoo for generative AI. Build AI-powered applications with ease."
requires-python = ">=3.8"
authors = [
    { name = "SocAIty" }
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "httpx",
    "tqdm",
    "pydantic>=2.11.3",
    "meseex>=0.0.2",
    "media-toolkit[VideoFile]>=00.02.17",
    "singleton_decorator==1.0.0",
    "jinja2>=3.1.6",
    "fastcloud[api_providers]>=0.0.11"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Repository = "https://github.com/SocAIty/fastsdk"
Homepage = "https://www.socaity.ai"

[tool.setuptools.package-data]
"fastsdk.sdk_factory" = ["*.j2"]
